 * Buffs/debuffs that are being sorted by duration now do so across all units that are being checked instead of only within each unit.
 * Updated COMBAT_LOG_EVENT_UNFILTERED for 4.2.
 * Restructured the data format for sounds/announcements
 * Added the following text output destinations:
 ** SCT (Scrolling Combat Text by Grayhoof)
 ** MikSBT
 ** Parrot

===v4.2.0===
 * New feature: Announcements. This allows you to announce something to WoW's chat (say, yell, party, raid, guild, emote, etc) when icon events are triggered (the same events that sounds already use).
 * The equivalency dropdown no longer gives you a headache when you look at it (It is now sorted alphabetically).
 * Fake hidden has been renamed to "Always Hide." The old functionality persists.
 * I spellchecked all of the English texts!
 * Added Ardent Defender to the defensive buff equivalency
 * Bug Fixes:
 ** (r80) Fixed error: conditions.lua:276: attempt to perform arithmetic on local "start" (a nil value) 
 ** (r81) Hopefully put the final nail in the coffin of the Masque ugly texture crap.
 ** (r82) Last minute changes without testing are bad, mmmkay? (Announcements actually work now.)
 ** (r83) Sounds for event "On Finish" should now work a little better. 
 ** (r84) Jinx: CoE is now properly checked as part of the spell damage taken equivalency. 

===v4.1.4.2===
 * Bugfix: TellMeWhen.lua:620: attempt to compare string with number
 * Bugfix: v4.1.4s interal version number was about 40,000 higher than it should have been. Whoops!
 
===v4.1.4===
 * New profiles now default to only one group instead of ten, and new/reset groups now place themselves in the center of the screen.
 * **//IMPORTANT//**: Because of the above change, there is a (very very small) chance that some of your groups moved. I apologize for the inconvenience. If you find that a group has been moved off the screen, type /tmw options, go to that group's config, and click the button to reset the group's position.